fixed the weird errors

--- a/server/pages/usercourses.html
+++ b/server/pages/usercourses.html
@@ -30,8 +30,8 @@
 	</div>
 
 	<div class="container-fluid content">
-		<h1>{{username}}</h1>
-		<form = "post">
+
+		<form method= "post">
 			<table data-bind="visible: courseslist().length>=0">
 				<thead>
 					<tr>
@@ -54,9 +54,9 @@
 			</table>
 
 			<a href='#' data-bind='click: $root.addCourse'><button type="button" class="btn btn-info" data-toggle="button">Add Course</button></a>
-				<textarea name="username" style="visibility: hidden;">{{username}}</textarea>
-				<textarea data-bind="text:ko.toJSON($root, null, 2)" style="visibility:hidden;"></textarea>
-				<input class="btn" type="submit"></input>
+				<textarea data-bind="text:ko.toJSON($root, null, 2)" name ="bunchesofdata" style="visibility: ;"></textarea>
+				<textarea name ="tester" style="visibility: ;">{{data}}</textarea>
+			<input class="btn" type="submit">
 		</form>
 		
 	</div>
