--- a/server/pages/assignments.html
+++ b/server/pages/assignments.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<title>Ideer</title>
 	<!-- styles stuff -->
-	<link type="text/css" rel="stylesheet" href="/assets/bootstrap/css/bootstrap.css" media="screen">
+	<link type="text/css" rel="stylesheet" href="../assets/bootstrap/css/bootstrap.css" media="screen">
 	<!-- knockout stuff -->
 	<script type="text/javascript" src="/assets/components/knockout-2.2.0.debug.js"></script>
 	<script type='text/javascript' src="http://knockoutjs.com/examples/resources/knockout.simpleGrid.1.3.js"></script>
