meeting front end working

--- a/server/pages/meetings.html
+++ b/server/pages/meetings.html
@@ -33,8 +33,33 @@
 	<div class="container-fluid content">
 		<h1></h1>
 		<form method="post">
-			
-			<a href='#' data-bind='click: $root.addItem'><button type="button" class="btn btn-info">Add Item</button></a>
+			<table data-bind="visible: meetingslist().length>=0">
+				<thead>
+					<tr>
+						<th><font size="5">Name</font></th>
+						<th><font size ="5">Course</font></th>
+						<th><font size ="5">Date</font></th>
+						<th><font size ="5">Time</font></th>
+					</tr>
+				</thead>
+				<tbody data-bind='foreach: meetingslist'>
+					<tr>
+
+						<td><input type="text" style="height:30px;" data-bind="value: mName"></input></td>
+
+						<td><select data-bind="options: $root.courses, value: mCourse, optionsText: 'cName' "></select></td>
+
+						<td><input style="height:30px;" type="date"  data-bind="value: mDate"></td>
+
+                        <td><input style="height:30px;" type="date"  data-bind="value: mTime"></td>
+
+						<td><a href='#' data-bind='click: $root.removeMeeting'><button type="button" class="btn btn-info" data-toggle="button">Delete</button></a></td>
+
+
+					</tr>
+				</tbody>
+			</table>
+			<a href='#' data-bind='click: $root.addMeeting'><button type="button" class="btn btn-info">Add Reminder</button></a>
 			<textarea data-bind="text:ko.toJSON($root, null, 2)" name ="bunchesofdata" style="visibility: ;"></textarea>
 			<input class="btn" type="submit">
 
@@ -59,9 +84,62 @@
 		function getItems() {
 			istr = '{{items}}'.replace(/&#34;/g, '"');
 			return JSON.parse(istr);
-		};
+		}
+		function getUserCourses() {
+			istr = '{{usercourses}}'.replace(/&#34;/g, '"');
+			items = JSON.parse(istr);
+			return items;
+		}
+		function UserCourse (name, diff){
+			var self = this;
+			//console.log(name.CID);
+			self.cName = name;
+			self.diff = diff;
+		}
+		var meetings = getItems();
+		var usercourses = getUserCourses();
+		function parseUserCourses(courses){
+			cList = [];
+			courses.forEach(function(c, i) {
+				//console.log(c);
+				cList.push(new UserCourse(c.CourseName, c.Difficulty));
+			});
+			//console.log(cList);
+			return cList;
 
-		
+		}
+		var usercoursesarray = parseUserCourses(usercourses);
+		//console.log(meetings);
+
+		function Meeting (name, course, date, time){
+			var self = this;
+
+			self.mName = name;
+			self.mCourse = course;
+			self.mDate = date;
+			self.mTime = time;
+
+		}
+		var meetingsarray =[];
+		console.log(usercoursesarray);
+		function MeetingViewModel (meetingsarray, usercoursesarray){
+			var self =this;
+			self.courses = usercoursesarray;
+			self.meetingslist = ko.observableArray(meetingsarray)
+
+			self.addMeeting = function(){
+				self.meetingslist.push(new Meeting("new meeting", self.courses[0], new Date(), new Date()));
+
+			}
+
+			self.removeMeeting = function(itm){
+				self.meetingslist.remove(itm);
+			}
+
+
+		}
+
+		ko.applyBindings(new MeetingViewModel(meetingsarray, usercoursesarray))
 	//formatting
 })
 </script>
