--- a/server/pages/exams.html
+++ b/server/pages/exams.html
@@ -49,7 +49,7 @@
 					<tr>
 						<td><select data-bind="options: $root.courses, value: itemCourse, optionsText: 'cName' "></select></td>
 
-						<td><input style="height:30px;" type="date" name="duedate"></td>
+						<td><input style="height:30px;" type="date" name="duedate"></input></td>
 
 						<td><a href='#' data-bind='click: $root.removeExam'><button type="button" class="btn btn-info">Delete</button></a></td>
 
