--- a/server/pages/assignments.html
+++ b/server/pages/assignments.html
@@ -32,7 +32,7 @@
 
 	<div class="container-fluid content">
 		<h1></h1>
-		<form method="post" data-bind="submit:submitMe">
+		<form method="post">
 			<table data-bind="visible: itemslist().length>=0">
 				<thead>
 					<tr>
@@ -59,9 +59,10 @@
 				</tbody>
 			</table>
 			<a href='#' data-bind='click: $root.addItem'><button type="button" class="btn btn-info">Add Item</button></a>
-			<textarea data-bind="text:ko.toJSON($root, null, 2)" name ="bunchesofdata" style="visibility: ;"></textarea>
-			<input class="btn" type="submit">
-
+			<form>
+				<textarea data-bind="text:ko.toJSON($root, null, 2)" name ="data" style="visibility: ;"></textarea>
+				<input class="btn" type="submit">
+			</form>
 		</form>
 	</div>
 	
@@ -97,7 +98,7 @@
 
 		function Item(name, course, diff, duedate, id){
 			var self = this;
-			
+
 			self.itemName = ko.observable(name);
 			self.itemCourse = ko.observable(course);
 			self.itemDiff = ko.observable(diff);
@@ -161,11 +162,6 @@
 
 			self.removeItem = function(itm){
 				self.itemslist.remove(itm);
-			}
-
-			self.submitMe = function() {
-				// gather myself for posting
-				return ko.toJSON(root, null, 2);
 			}
 		}
 		ko.applyBindings(new ItemViewModel(itemsarray, coursesarray));
