front end reminders working

--- a/server/pages/Work.html
+++ b/server/pages/Work.html
@@ -49,9 +49,9 @@
 
                         <td><input style="height:30px;" type="date" name="duedate1" data-bind="value: itemDate"></td>
 
-                        <td><input style="height:30px;" type="date" name="duedate2" data-bind="value: itemStartTime"></td>
+                        <td><input style="height:30px;" type="text" name="duedate2" data-bind="value: itemStartTime"></td>
 
-                        <td><input style="height:30px;" type="date" name="duedate3" data-bind="value: itemEndTime"></td>
+                        <td><input style="height:30px;" type="text" name="duedate3" data-bind="value: itemEndTime"></td>
 
                         <td><a href='#' data-bind='click: $root.removeItem'><button type="button" class="btn btn-info" data-toggle="button">Delete</button></a></td>
 
