--- a/server/pages/index.html
+++ b/server/pages/index.html
@@ -17,6 +17,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/login/courses?username={{username}}">Courses</a></li>
         <li><a href="/contact">Contact</a></li>
+        <li><a href="/priority">Priority</a></li>
       </ul>
       <ul class="nav pull-right">
         <a class="btn btn-success" type="button" href="/login">Login</a>
