--- a/server/pages/assignments.html
+++ b/server/pages/assignments.html
@@ -24,7 +24,7 @@
 						<li><a href="/">Home</a></li>
 						<li><a href="/login/courses?username={{username}}">Courses</a></li>
 						<li><a href="/contact">Contact</a></li>
-					</ul>
+            			<li><a href="/priority">Priority</a></li>					</ul>
 				</div>
 			</div>
 		</div>
