--- a/server/pages/meetings.html
+++ b/server/pages/meetings.html
@@ -24,6 +24,7 @@
 						<li><a href="/">Home</a></li>
 						<li><a href="/login/courses?username={{username}}">Courses</a></li>
 						<li><a href="/contact">Contact</a></li>
+            			<li><a href="/priority">Priority</a></li>
 					</ul>
 				</div>
 			</div>
