--- a/server/pages/reminders.html
+++ b/server/pages/reminders.html
@@ -28,7 +28,8 @@
 					<ul class="nav">
 						<li><a href="/">Home</a></li>
 						<li><a href="/login/courses?username={{username}}">Courses</a></li>
-						<li><a href="#">Contact</a></li>
+						<li><a href="/contact">Contact</a></li>
+            			<li><a href="/priority">Priority</a></li>
 					</ul>
 				</div>
 			</div>
