--- a/server/pages/priority.html
+++ b/server/pages/priority.html
@@ -28,11 +28,12 @@
       <h2>Here is your Priority</h2>
       <ul data-bind="foreach:{data:prioritizedList, as: 'ptd'}">
         <li>
-          <span class="label label-important" data-bind="text: $data">
+          <span data-bind="text: $data">
+            
           </span>
         </li>
         <li>
-          <span >
+          <span>
             Homework100, Databases, 3
           </span>
         </li>
